# python3_docker_umage

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
